feat: enforce Tool Gateway tenant isolation